--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,52 +1,59 @@
 name: Build using Github Actions
 on: [push, pull_request]
 jobs:
-  build-source:
+  build:
     name: Checkout source code and build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: recursive
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y python3-serial cmake
-      - name: Install Arduino IDE
-        run: |
-          curl -L https://downloads.arduino.cc/arduino-1.8.19-linux64.tar.xz -o /tmp/arduino-ide.tar.xz
-          tar -xf /tmp/arduino-ide.tar.xz --directory ~/
-          cd ~/arduino*
-          ./install.sh
-          ./arduino --pref "boardsmanager.additional.urls=https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json" --save-prefs
-          ./arduino --install-boards esp32:esp32
-      - name: Install Arduino CMake Toolchain
-        uses: actions/checkout@v2
+      - uses: actions/cache@v3
         with:
-          repository: technyon/Arduino-CMake-Toolchain
-          path: arduino-toolchain
-      - name: Build
+          path: |
+            ~/.cache/pip
+            ~/.platformio/.cache
+          key: ${{ runner.os }}-pio
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+      - name: Install PlatformIO Core
+        run: pip install --upgrade platformio
+      - name: Build PlatformIO Project esp32dev
+        run: | 
+          pio run --environment esp32dev
+          mkdir -p release/esp32dev
+          cp .pio/build/esp32dev/firmware.bin release/esp32dev/nuki_hub.bin
+          cp .pio/build/esp32dev/partitions.bin release/esp32dev/nuki_hub.partitions.bin
+          cp .pio/build/esp32dev/bootloader.bin release/esp32dev/bootloader.bin
+          echo "esptool.py --chip esp32 --port /dev/ttyUSB0 --baud 921600 --before default_reset --after hard_reset write_flash -z --flash_mode dio --flash_freq keep --flash_size detect 0x1000 bootloader.bin 0x10000 nuki_hub.bin 0x8000 nuki_hub.partitions.bin" > release/esp32dev/flash.sh
+      - name: Build PlatformIO Project az-delivery-devkit-v4
         run: |
-          mkdir -p build
-          cd build
-          cmake -D CMAKE_TOOLCHAIN_FILE=../arduino-toolchain/Arduino-toolchain.cmake ..
-          echo "# Espressif ESP32 Partition Table" > partitions.csv
-          echo "# Name, Type, SubType, Offset, Size, Flags" >> partitions.csv
-          echo "nvs,      data, nvs,     0x9000,  0x5000," >> partitions.csv
-          echo "otadata,  data, ota,     0xe000,  0x2000," >> partitions.csv
-          echo "app0,     app,  ota_0,   0x10000, 0x1E0000," >> partitions.csv
-          echo "app1,     app,  ota_1,   0x1F0000,0x1E0000," >> partitions.csv
-          echo "spiffs,   data, spiffs,  0x3D0000,0x30000," >> partitions.csv
-          make
-      - name: Upload artifacts
+          pio run --environment az-delivery-devkit-v4
+          mkdir -p release/az-delivery-devkit-v4
+          cp .pio/build/az-delivery-devkit-v4/firmware.bin release/az-delivery-devkit-v4/nuki_hub.bin
+          cp .pio/build/az-delivery-devkit-v4/partitions.bin release/az-delivery-devkit-v4/nuki_hub.partitions.bin
+          cp .pio/build/az-delivery-devkit-v4/bootloader.bin release/az-delivery-devkit-v4/bootloader.bin
+          echo "esptool.py --chip esp32 --port /dev/ttyUSB0 --baud 921600 --before default_reset --after hard_reset write_flash -z --flash_mode dio --flash_freq keep --flash_size detect 0x1000 bootloader.bin 0x10000 nuki_hub.bin 0x8000 nuki_hub.partitions.bin" > release/az-delivery-devkit-v4/flash.sh
+      - name: Build PlatformIO Project esp32solo1
         run: |
-          mkdir release
-          cp build/nuki_hub.bin release/
-          cp build/nuki_hub.partitions.bin release/
-          cp $(find ~/.arduino15/packages/esp32/ | grep boot_app0.bin) release/
-          echo "esptool.py --chip esp32 --port /dev/ttyUSB0 --baud 921600 --before default_reset --after hard_reset write_flash -z --flash_mode dio --flash_freq 80m --flash_size detect 0xe000 boot_app0.bin 0x1000 bootloader_dio_80m.bin 0x10000 nuki_hub.bin 0x8000 nuki_hub.partitions.bin" > release/flash.sh
+          pio run --environment esp32solo1
+          mkdir -p release/esp32solo1
+          cp .pio/build/esp32solo1/firmware.bin release/esp32solo1/nuki_hub.bin
+          cp .pio/build/esp32solo1/partitions.bin release/esp32solo1/nuki_hub.partitions.bin
+          wget https://github.com/tasmota/arduino-esp32/releases/download/2.0.5.3/framework-arduinoespressif32-solo1.zip
+          unzip framework-arduinoespressif32-solo1.zip
+          cp framework-arduinoespressif32/tools/sdk/esp32/bin/bootloader_dio_80m.bin release/esp32solo1/bootloader.bin
+          echo "esptool.py --chip esp32 --port /dev/ttyUSB0 --baud 921600 --before default_reset --after hard_reset write_flash -z --flash_mode dio --flash_freq keep --flash_size detect 0x1000 bootloader.bin 0x10000 nuki_hub.bin 0x8000 nuki_hub.partitions.bin" > release/esp32solo1/flash.sh
       - uses: actions/upload-artifact@v3
         with:
-          name: release-assets
-          path: release/
-  
+          name: esp32dev-assets
+          path: release/esp32dev
+      - uses: actions/upload-artifact@v3
+        with:
+          name: az-delivery-devkit-v4-assets
+          path: release/az-delivery-devkit-v4
+      - uses: actions/upload-artifact@v3
+        with:
+          name: esp32solo1-assets
+          path: release/esp32solo1
